# log-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/batches/: batch_results.jsonl  batch_results_incremental.jsonl  manifest.json  manifest_incremental.json
data/labels/: Android.jsonl  Apache.jsonl  BGL.jsonl  DatabaseErrors.jsonl  HDFS.jsonl  HPC.jsonl  Hadoop.jsonl  HealthApp.jsonl  JavaApp.jsonl  KernelErrors.jsonl  Linux.jsonl  Mac.jsonl  Microservices.jsonl  OpenSSH.jsonl  OpenStack.jsonl  Proxifier.jsonl  SecurityEvents.jsonl  Spark.jsonl  Thunderbird.jsonl  WebServer.jsonl  Windows.jsonl  Zookeeper.jsonl
data/models/: eval_full_loghub.json  eval_report.json  eval_rust_loghub.json  eval_transformer.json
data/models/transformer/export/: config.json  reference_outputs.json  reference_tokens.json  tokenizer.json
rust/classifier/: Cargo.toml  README.md  pyproject.toml
rust/classifier/src/: classifier.rs  features.rs  lib.rs  model.rs  normalize.rs  tfidf.rs  transformer.rs
scripts/: README.md  generate_test_logs.py
scripts/labeling/: RETRAINING.md  collect_results.py  config.py  download_loghub.py  eval_all_loghub.py  eval_full_loghub.py  eval_rust_loghub.py  export_model.py  export_transformer.py  generate_error_logs.py  label_new.py  parse_labels.py  prepare_batches.py  run_pipeline.py  sample_look_noerr.py  submit_batch.py  train_model.py  train_transformer.py  validate_labels.py
src/log_mcp/: classifier_bridge.py  formatting.py  normalize.py  server.py  util.py
src/log_mcp/parsing/: adaptive_parser.py  base.py  detector.py  json_parser.py  text_parser.py
src/log_mcp/tools/: classify.py  compare.py  errors.py  overview.py  search.py  segment.py  stats.py
tests/: conftest.py  test_classifier_bridge.py  test_compare.py  test_compare_classifier.py  test_errors.py  test_generated_logs.py  test_nginx.py  test_normalize.py  test_parsers.py  test_tools_integration.py
