[project]
name = "log-mcp"
version = "0.1.0"
description = "MCP server for log file analysis"
requires-python = ">=3.10"
dependencies = ["mcp[cli]"]

[project.scripts]
log-mcp = "log_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_mcp"]
