[project]
name = "log-mcp"
version = "0.1.0"
description = "MCP server for log file analysis"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mcp[cli]"]

[project.scripts]
log-mcp = "log_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
labeling = [
    "anthropic>=0.42.0",
]
training = [
    "scikit-learn>=1.4",
]
transformer = [
    "torch>=2.1",
    "transformers>=4.36",
    "datasets>=2.16",
    "safetensors>=0.4",
    "accelerate>=0.25",
    "scikit-learn>=1.4",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25",
]
