[package]
name = "look-skip-classifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "look_skip_classifier"
crate-type = ["cdylib", "rlib"]

[features]
default = ["transformer"]
transformer = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
metal = ["transformer", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["transformer", "candle-core/accelerate", "candle-nn/accelerate"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fancy-regex = "0.14"
aho-corasick = "1"
ahash = { version = "0.8", features = ["serde"] }
rayon = "1"

# Transformer inference (optional)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }
